--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -134,9 +134,7 @@
 
 			<div class="container">
 				<p class="justified"> <span class = "text-aria">
-				From initial discussions, we observed that the main problems arise when obstacles with moving obstacles and ones at head height. Often, they find it hard to concentrate on the path because of the obstacles. To alleviate some of these standing problems, our team at the University of Maryland, Baltimore County decided to build a device for blind runners through the <span class="irqhighlight"> user centered approach </span>. The project was done under the guidance of Dr.Ravi Kuber. The base requirements is that users want a device that relies on haptics and uses sensors to detect obstacles. In addition to that, the requirements point to the devices being non-invasive and portable so that it does not impeade their run in any way possible. Some of the questions that we tried to answer were : </span> </p>
-
-				<h2 class="header-aria">Research Questions</h2>
+				From initial discussions, we observed that the main problems arise when obstacles with moving obstacles and ones at head height. Often, they find it hard to concentrate on the path because of the obstacles. To alleviate some of these standing problems, our team at the University of Maryland, Baltimore County decided to build a device for blind runners through the <span class="irqhighlight"> user centered approach </span>. The project was done under the guidance of Dr.Ravi Kuber. The base requirements is that users want a device that relies on haptics and uses sensors to detect obstacles. In addition to that, the requirements point to the devices being non-invasive and portable so that it does not impeade their run in any way possible. Some of the <b>research questions </b> that we tried to answer were : </span> </p>
 					  <li class="tabspacing"><span class = "text-aria">Can the users effienciently look for the information they need after using our prototype? </span></li>
 					  <li class="tabspacing"><span class = "text-aria">Can the prototype clearly distinguish obstacles in each path? </span></li>
 					  <li class="tabspacing"><span class = "text-aria">Can the prototype be tested on any given terrain yielding efficient results? </span> </li>
@@ -165,57 +163,46 @@
 		</section>
 
 
-			<!-- End Requirements Details -->
-
-
-			<!-- <section>
-			  <div class="container" data-aos="fade-up">
-				  <h2><b>Whiteboarding</b></h2>
-				  <div class ="row">
-				  <div class ="col-md-4">
-				  <img src="assets/img/Personal/Discussion 2.jpg" class="avatar3" alt="">
-				  </div>
-				  <div class="col-md-8">
-				  <p class="justified">
-					<span class = "researchtext"> With the research questions now generated, our team sat together for round table discussions and whiteboarding. Keeping Santiago's initial requirements in mind, we came up with a defined process, and a set of scenarios to aid future work. 	</span> </p>
-				</div>
-					</div>
-			</section>
 
 			<section>
-			  <div class="container" data-aos="fade-up">
-				  <h2><b>Rolestorming</b></h2>
-				  <div class ="row">
+							<div class="container section-title" data-aos="fade-up">
+								<div>
+									<h2 class="portfolio-title" align="center">RESEARCH</h2>
+								</div><p class="justified">
+									<span class="text-aria">Study to assess the manner in which participants interact with technology while running and develop a prototype for the same using the human-centered design process. Done in phases.
+										To come up with the working prototype, we had to go in depth to understand the painpoints of the users and conduct <b>Generative research.</b> Methods used in this process: </span></p>
+									<div class="row bottompadding uppermargin">
+									<div class="col-md-2">
+										<img src="assets/img/Personal/Interviews.png" class="img-fluid" alt="">
+									</div>
+										<div class="col-md-2">
+											<img src="assets/img/Personal/LR.png" class="img-fluid" alt="">
+									</div>
+									<div class="col-md-2">
+										<img src="assets/img/Personal/AM.png" class="img-fluid" alt="">
+									</div>
+									<div class="col-md-2">
+										<img src="assets/img/Personal/Scenario.png" class="img-fluid" alt="">
+									</div>
+									<div class="col-md-2">
+										<img src="assets/img/Personal/CA3.png" class="img-fluid" alt="">
+									</div>
+									<div class="col-md-2">
+										<img src="assets/img/Personal/Eval.png" class="img-fluid" alt="">
+									</div>
+								</div>
+								</div>
 
-				  <div class="col-md-8">
-				  <p class="justified">
-					<span class = "researchtext"> Putting ourselves in the runners shoes, the team enacted various scenarios involving individuals who are blind and running while coming up with different solutions in addition to the ones generated while whiteboarding.</span> </p>
-				</div>
-				<div class ="col-md-4">
-				  <img src="assets/img/Personal/rolestorming.jpg" class="avatar3" alt="">
-				  </div>
-					</div>
-				</div>
-			</section>
-
-			-->
-
-		<section id="methods">
+			<div class="background">
 			<div class="container" data-aos="fade-up">
-				  <div>
-				  <h2><b>METHODOLOGY</b></h2>
-				  </div>
+				 	<p class="justified">
+					<span class = "text-aria"> </p>
+					<h2 class="uppermargin headerbackground" align="center"><b>LITERATURE REVIEW</b></h4>
 
-					<p class="justified">
+					<p class="justified textbackground"><span class = "text-aria"> The team collected several works related to prototypes for individuals who are blind. This rigorous search helped the team to understand the development from other researchers' perspectives. I populated and read through research papers to gain insight and information on the given topic, identify gaps in previous research. Overall, we wanted to have a solid background for our study. The literature study also helped provide an overview of some of the specifics used in assistive devices (Sensor information etc.,). Seeing that many researchers built prototypes as walking assistance and not running was a milestone for our project. </span></p>
 
-					<span class = "text-aria"> Study to assess the manner in which participants interact with technology while running and develop a prototype for the same using the human-centered design process. Done in phases.</p>
-
-					<h4 class="uppermargin"><b>Literature Review</b></h4>
-
-					<p class="justified"><span class = "text-aria"> The team collected several works related to prototypes for individuals who are blind. This rigorous search helped the team to understand the development from other researchers' perspectives. I populated and read through research papers to gain insight and information on the given topic, identify gaps in previous research. Overall, we wanted to have a solid background for our study. The literature study also helped provide an overview of some of the specifics used in assistive devices (Sensor information etc.,). Seeing that many researchers built prototypes as walking assistance and not running was a milestone for our project. </span></p>
-
-				  <h2 class="header-aria">Some Insights</h2>
-					<ul class="listitems">
+				  <h2 class="header-aria headerbackground">FINDINGS</h2>
+					<ul class="textbackground">
 						<li class="text-aria">Research related to running is at a premium. Researhers have focussed on aiding individuals who are blind while walking from one place to another. </li>
 						<li class="text-aria">Research indicates the presence of more than one kind of sensors located at different regions to tackle dynamic obstacles. </li>
 						<li class="text-aria">An array of sensors is used as a feedback mechanism post obstacle detection. </li>
@@ -224,9 +211,13 @@
 
 				  <figure>
 				  <img src="assets/img/Personal/Literature Survey.png" class="img-fluid" alt="">
-				  <figcaption align="center"><i>Literature Survey</i></figcaption>
+				  <figcaption class="textbackground" align="center"><i>Literature Survey</i></figcaption>
 				  </figure>
 				  </br>
+				</div>
+			</div>
+
+			<div class="container">
 				  <h4 class="uppermargin"><b>Competitive Analysis</b></h4>
 
 					<p class="justified"><span class = "text-aria"> The team looked at some of the different products available on the market. We even ordered a couple of devices (The Buzzclip, SUNU Band) to try out and give a different opinion. The competitive analysis gave us the strengths and weaknesses of the various products used by people who suffer from vision impairments. Trying out the devices gave an understanding of the features and functions. Trying out the products also helped inform the design process. User reviews helped us understand what the users think about the different products.</span> </p>
