--- a/mobileapp.html
+++ b/mobileapp.html
@@ -93,7 +93,7 @@
 				  <ul>
 				  <li class="text-aria"><strong>Categories</strong>: Accessibility, Mobile Technology, User-Centered Design</li>
 				  <li class="text-aria"><strong>User Base</strong>: Individuals who are blind</li>
-				  <li class="text-aria"><strong>Project Timeline</strong>: 1 year </li>
+				  <li class="text-aria"><strong>Project Timeline</strong>: May 2020 - December 2020 </li>
 				  <li class="text-aria"><strong>Team Members</strong>: Solo Project</a></li>
 				</ul>
 				</p>
@@ -102,7 +102,7 @@
 			  <p class="justified text-aria"> UX researcher and UX designer responsible for designing a mobile application assisting individuals who are blind.</p>
 
 				<h3 class="header-aria">Impact</h2>
-				<p class = "text-aria justified">Many individuals who suffer from vision loss will be helped with the application irrespective of the demographic. Increased interactions because of the continuous volunteering of sighted people. This would lead to greater usage of the application and greater awareness among people. An application that can be a proper substitute in the market for the solitary applications like AIRA/Be My Eyes. More individuals who are blind, connected to technology. Ease of Access because of prior interactions with voice assistants. </p>.
+				<p class = "text-aria justified">Many individuals who suffer from vision loss will be helped by the application <b> irrespective of the demographic. </b> Increased interactions because of the continuous volunteering of sighted people. This would lead to greater usage of the application and <b>greater awareness among people.</b> The prototype if developed can trigger a wide request response chain and enable the community to aid the individual. An application that can be a <b> proper substitute in the market </b> for the solitary applications like AIRA/Be My Eyes. More individuals who are blind, connected to technology. Ease of Access because of prior interactions with voice assistants. <b>Intended to perform the simplest of the functions in the the most efficient way possible. </b> </p>
 			 </div>
 			 </div>
 			</div>
@@ -116,7 +116,7 @@
 		<h2 class="portfolio-title">The project</h2>
 
 			  <p class="justified">
-				<span class = "text-aria"> This is an individual project driven by my motivation to help individuals who are blind. As a part of my thesis, I am investigating the navigational habits of individuals who are blind. From the semi-structured interviews, I decided to use that data, along with other user research techniques to come up with an application that may encapsulates things that users would like to see in a navigational application. Currently the functionalities are spread out across applications which leads me to wonder, can I make an application prototype that puts all the navigation functionalities in one application? </span> </p>
+				<span class = "text-aria"> This is project driven by my motivation to help individuals who are in need of assistance. As a part of my thesis, I am investigating the navigational habits of individuals who are blind. From the semi-structured interviews, I decided to use that data, along with other user research techniques to come up with an application that may encapsulates things that users would like to see in a navigational application.<b> Currently the functionalities are spread out across applications which leads me to wonder, can I make an application prototype that puts all the navigation functionalities in one application?</b>  </span> </p>
 
 			  </div>
 			</div>
@@ -129,15 +129,15 @@
 			<h5 class = "userbasecolor"><b>Who are the users? </b></h5>
 			<p class="justified"> <span class = "text-aria"> Individuals with vision loss, capable of using a mobile phone. </span> </p>
 			<h5 class = "userbasecolor"><b>What problem am I solving? </b></h5>
-			<p class="justified"> <span class = "text-aria">  Given that individuals who are blind are so accustomed to the white cane, There exist some issues related to navigation that persist in their lives namely connectivity for information for directions, and asking people for directions when in a new place. There are no applications that cover all the issues related to navigation. Hence, I decided to come up with an application prototype of my own. </span> </p>
+			<p class="justified"> <span class = "text-aria"> There exist some issues related to navigation that persist in the lives of individuals who are blind,  obtaining information for directions, and asking people for directions when in a new place, to name a few. There is no framework to cover all the issues related to navigation on a single application. Hence, I decided to come up with an application prototype to help solve the problem. </span> </p>
 			<h5 class = "userbasecolor"><b>How am I solving the problem? </b></h5>
-			<p class="justified"> <span class = "text-aria"> Generative Research and Human Centered Design Methods.</span> </p>
+			<p class="justified"> <span class = "text-aria"> Generative Research and Human Centered Design, Rapid Prototyping.</span> </p>
 		</div>
 
 
 		<div class ="container uppermargin">
 			  <h3><b>Recruitment</b></h3>
-			  <p class="text-aria">I recruited participants by reaching out to a charity run blind school. using the <span class="irqhighlight"> snowball sampling technique. </span> </p>
+			  <p class="text-aria">I recruited participants by reaching out to a charity run blind school.
 			  <span class="text-aria">
 
 			  <p class="tabspacing"><b>Demographic:</b> Individuals who are blind. Age - 18+<p>
@@ -152,58 +152,66 @@
 			  </div>
 			  </div>
 		</section>
-		<section id="methods">
-		  <div class="container">
-			  <h2><b>METHODOLOGY</b></h2>
-			  <p class="justified">
-				<span class = "text-aria"> Short study involving generative research to get the pain-points and preferences of individuals using navigation applications. Conducting user research gave me an idea on how the design should be to yield maximum results.</p>
-				<ul class="text-aria">
-				<li>Thorough research on the applications in use by the individuals who are blind</li>
-				<li>Semi Structured Context Interviews with 14 participants from a charity run blind school</li>
-				<li>Field Studies, observing technology use of the users in their natural element</li>
-				<li>Collecting insights, Persona, Empathy mapping and Storyboard creation from the qualitative data obtained</li>
-				<li>Prototype Creation, design, and evaluation</li>
-				</ul>
 
-				<h4 class="uppermargin"><b>Product Analysis</b></h4>
+						<div class="container section-title" data-aos="fade-up">
+							<div>
+								<h2 class="portfolio-title" align="center">RESEARCH</h2>
+							</div>
 
-				<p class="justified"><span class="text-aria"> To get a feel of what they feel like when they wear devices while moving from one place to another, I decided explore some of the mobile applications and other devices thoroughly.</span> </p>
+							<p class="justified"><span class = "text-aria"> Short study involving generative research to get the pain-points and preferences of individuals using navigation applications. Conducting user research gave me an idea on how the design should be to yield maximum results.</span>
+				</div>
+
+				<div class="background">
+					<div class="container">
+				<h2 class="uppermargin headerbackground" align="center"><b>COMPETITIVE ANALYSIS</b></h2>
+
+				<p class="justified"><span class="text-aria textbackground"> To get a feel of what they feel like when they wear devices while moving from one place to another, I decided explore some of the mobile applications and other devices thoroughly.</span> </p>
 
 				<img src="assets/img/Personal/PA2.png" class="img-fluid" alt="">
+			</div>
+		</div>
 
-			<h4 class="uppermargin"><b>User Interviews </b></h4>
+			<div class="background2">
+				<div class="container">
+			<h2 class="uppermargin" align="center"><b>USER INTERVIEWS </b></h2>
 				  <blockquote> <i> I would like the mobile application to tell me about the position of the bus stops, traffic in the area and so on.. </i></blockquote>
 				  <blockquote> <i>I use google maps a lot. I also use Lazarillo to help me within the walls of the city. I like applications where the functions are easily visible</i></blockquote>
 
 				</div>
 				</div>
 
-
+				<div class="background">
 			<div class="container">
-				<h4 class="uppermargin"><b>Field Observations </b></h4>
+				<h2 class="uppermargin headerbackground" align="center"><b>FIELD OBSERVATIONS </b></h2>
 				<p class="justified">
-				<span class = "text-aria"> I travelled to blind schools to observe the individuals in a natural space, taking down notes, combining the information obtained with the interviews to draw insights.</span></p>
+				<span class = "text-aria textbackground"> I travelled to blind schools to observe the individuals in a natural space, taking down notes, combining the information obtained with the interviews to draw insights.</span></p>
 			</div>
+		</div>
 
+		<div class="background2">
 			<div class="container">
-				<h4 class="uppermargin"><b>Empathy Maps</b></h4>
+				<h2 class="uppermargin" align="center"><b>EMPATHY MAPS</b></h2>
 				<p class="justified">
 				<span class = "text-aria"> I came up with an empathy map to understand and prioritize the user's needs. I put this step as a forward to the user interviews. By taking one of the participants from the interview as a stand point, the empathy map was created. </span> </p>
 				<img src="assets/img/Personal/EmpathyMaps.png" class="avatar7" alt="">
 			</div>
+		</div>
 
+		<div class="background">
 			<div class="container">
-				<h4 class="uppermargin"><b>Persona Creation</b></h4>
+				<h2 class="uppermargin headerbackground" align="center"><b>PERSONAS</b></h2>
 				<p class="justified">
-				<span class = "text-aria"> Among the other things, they want to see applications that give them the presence of sidewalks, the positioning of intersections, an emergency assistance button, and a scanner of handwritten data. Additionally, several application-specific pointers were noted down and eventually referenced to a User Persona to get an idea of how the application will be shaped in the future. </span> </p>
+				<span class = "text-aria textbackground"> Among the other things, they want to see applications that give them the presence of sidewalks, the positioning of intersections, an emergency assistance button, and a scanner of handwritten data. Additionally, several application-specific pointers were noted down and eventually referenced to a User Persona to get an idea of how the application will be shaped in the future. </span> </p>
 				<img src="assets/img/Personal/Persona3.png" class="avatar6" alt="">
 			</div>
+		</div>
 
+		<div class="background2">
 			<div class="container">
-				<h4 class="uppermargin"><b>Story Boards</b></h4>
+				<h2 class="uppermargin" align="center"><b>STORY BOARDS</b></h2>
 				<p class="justified">
 							<span class = "text-aria"> Storyboards changed my perception of the functionalities that can be implemented in my project. I realized that my application cannot have all the functionalities that I desire because of constraints indicated by the storyboards. The storyboards helped me synthesize the content and match my thinking with the constraints. </span> </p>
-				<div class ="row">
+				<div class ="row bottompadding">
 					<div class ="col-md-6">
 						<img src="assets/img/Personal/Storyboard1.jpg" class="avatar7" alt="">
 					</div>
@@ -212,24 +220,24 @@
 					</div
 				</div>
 			</div>
+		</div>
+	</div>
 
+		<div class="background">
 			<div class="container">
-
-				<h4 class="uppermargin"><b>Affinity Mapping</b></h4>
+				<h2 class="uppermargin headerbackground" align="center"><b>AFFINITY MAPPING</b></h2>
 				<p class="justified">
-				<span class = "text-aria"> Having obtained the data, I am now looking at drawing themes and prioritizing them.</span> </p>
+				<span class = "text-aria textbackground"> Having obtained the data, I am now looking at drawing themes and prioritizing them.</span> </p>
 				<p class="justified">
-				<span class = "text-aria"> The Affinity diagram helped me structure my thoughts and organize the content.</span> </p>
+				<span class = "text-aria textbackground"> The Affinity diagram helped me structure my thoughts and organize the content.</span> </p>
 				<img src="assets/img/Personal/Affinitydiagram2.png" class="avatar7" alt="">
 			</div>
 			</div>
+		</div>
 
-		  </section>
-
-			<section id="insights2">
+			<section>
 			<div class="container" data-aos="fade-up">
 			  <h2 class="uppermargin2"><b>Insights</b></h2>
-				<span class="text-aria">
 					<p class="tabspacing"><b>Information: </b> Participants want information to be presented to them directly via the application or require fellow human to tell them navigational directions.</p>
 					<p class="tabspacing"><b>Functions: </b> Participants look for functions to be ‘visible’ – easily identifiable.</li>
 					<p class="tabspacing"><b>Specific Information: </b> Look out for information like Bus Route Information, Bus Stop names, nearby accessible stops, etc.,</p>
@@ -258,15 +266,10 @@
 			  <p class="justified">
 				<span class = "text-aria"> Starting with the <span class="irqhighlight"><b> Pen and Paper Sketches </b> </span> for low fidelity, <span class="irqhighlight"> <b> Balsamiq Mockups </b> </span> for medium fidelity, and <span class="irqhighlight"> <b> Adobe XD </b></span> for high fidelity mockups, I went in stages.</p>
 				<h4 class><b>Pen - Paper Sketches</b></h4>
-				<div class="row">
-				<div class ="col-md-6">
-				<img src="assets/img/Personal/PPSketch.png" class="avatar7" alt="">
-				</div>
-			<div class ="col-md-6">
-			<p class="justified">
-				<span class = "text-aria"> I love to put my thoughts on paper so I decided to go ahead with the pen-paper route. Anything that comes to my mind has to hit the white sheet first.</span> </p>
-			</div>
-			</div>
+				<p class="justified">
+					<span class = "text-aria"> I love to put my thoughts on paper so I decided to go ahead with the pen-paper route. Anything that comes to my mind has to hit the white sheet first.</span> </p>
+				<img src="assets/img/Personal/PPSketch.png" class="avatar4" alt="">
+
 
 			<h4 class="uppermargin"><b>Wireframing</b></h4>
 			<p class="justified">
@@ -277,7 +280,7 @@
 				<img src="assets/img/Personal/MainScreen.png" class="avatar4" alt="">
 				</div>
 			<div class ="col-md-8">
-			<p class="justified">
+			<p class="justified  uppermargin">
 			 <span class = "text-aria"> This is the main page and is a key component in the application. It has 3 pivotal functions </p> <h5> <span class ="text-aria irqhighlight"> Ask for Assistance </span>, <span class="text-aria irqhighlight"> Connect to Maps </span> , <span class =" text-aria irqhighlight"> Video Assistance</span> </span></h5>
 			</div>
 			</div>
@@ -285,13 +288,14 @@
 			<img src="assets/img/Personal/MediumConnect.PNG" class="avatar8" alt="">
 			<h6 class="uppermargin" style="color:blue;"><b>Function Screen #2</b></h6>
 			<img src="assets/img/Personal/VideoAssistance.PNG" class="avatar8" alt="">
-			<div class="background">
 			<h4 class="uppermargin"><b>Prototype</b></h4>
 			<p class="justified">
 				<span class = "text-aria"> <b> Adobe XD </b> was the tool used and I also used <span class="irqhighlight">voice feature </span> given by the tool to do the same.</span> </p>
 				<img src="assets/img/Personal/MockupFinal.png" class="avatar4" alt="">
-			</div>
+
 			<p class ="text-aria"> To take a look at the prototype, click <a href="https://xd.adobe.com/view/003e47c3-2a70-47ce-a40c-7989f1c48a88-556d/"> Here </a> </p>
+
+			</div>
 			</section>
 
 
