--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -217,34 +217,51 @@
 				</div>
 			</div>
 
+			<!-- Literature Survey End -->
+
+			<!-- Competitive Analysis Begin -->
+
+			<div class="background2">
 			<div class="container">
-				  <h4 class="uppermargin"><b>Competitive Analysis</b></h4>
+				  <h2 class="uppermargin" align="center"><b>COMPETITIVE ANALYSIS</b></h2>
 
 					<p class="justified"><span class = "text-aria"> The team looked at some of the different products available on the market. We even ordered a couple of devices (The Buzzclip, SUNU Band) to try out and give a different opinion. The competitive analysis gave us the strengths and weaknesses of the various products used by people who suffer from vision impairments. Trying out the devices gave an understanding of the features and functions. Trying out the products also helped inform the design process. User reviews helped us understand what the users think about the different products.</span> </p>
 
-					<h2 class="header-aria">Some Insights</h2>
+					<h2 class="header-aria ">FINDINGS</h2>
 
 					<p class="justified"><span class="text-aria">The BuzzClip is a portable device with a single sensor, but it is expensive. The BuzzClip may fall off the clip-on object and cause problems to the person using it.Other devices like the SUNU BAND have a high learnability curve and in addition to the application that comes with it. The minimum pricing is in the higher $200 range. Not many users go out of their comfort zone of using the white cane and buy specific devices.Other devices were not tried but searched online. That can be considered a drawback in the competitive analysis because the researchers do not have the first-hand experience trying out the device.
 				  <img src="assets/img/Personal/CA.png" class="avatar8" alt="">
 				  <figcaption align="center"><i>BuzzClip, SUNU Band, and the WeWalk Smart Cane </i></figcaption>
 				  </figure>
 
+				</div>
+			</div>
 
-				  <h4 class="uppermargin"><b>Scenario Development</b></h4>
-					<span class = "text-aria"> Multiple scenarios were developed over a period to ensure that major situations are covered and the prototype addresses them. We believe that by creating the scenarios, we could generate empathy for our user base (runners who are visually impaired) and design, and develop the most optimal solution. Scenarios also made us understand the key features of our device, where it may be used and also shed some light on the environmental condition that may hamper it's usage. We created scenarios because we believed that it would help us in understanding environmental specific motivational factors and guide user thought process.</span></p>
-					<h2 class="header-aria">Some Insights</h2>
-					<ul class="listitems">
-						<li class="text-aria">Scenarios guided us in the design process in the sense that it allowed us to empathize with the users related to specific situations </li>
-						<li class="text-aria"> Shed some light on the probable limitations of the device.</li>
-						<li class="text-aria">Enabled us to identify hard-to notice user needs.</li>
-						<li class="text-aria">Scenarios gave us the challenges faced by the users and how we could tackle the same.</li>
-						<li class="text-aria"> Scenarios also indicated the motivations and thought processes of the users under consideration </li>
+				<div class="background">
+				<div class ="container">
+
+				  <h2 class="uppermargin headerbackground" align="center"><b>SCENARIOS</b></h2>
+					<span class = "text-aria textbackground"> Multiple scenarios were developed over a period to ensure that major situations are covered and the prototype addresses them. We believe that by creating the scenarios, we could generate empathy for our user base (runners who are visually impaired) and design, and develop the most optimal solution. Scenarios also made us understand the key features of our device, where it may be used and also shed some light on the environmental condition that may hamper it's usage. We created scenarios because we believed that it would help us in understanding environmental specific motivational factors and guide user thought process.</span></p>
+					<h2 class="header-aria headerbackground">FINDINGS</h2>
+					<ul class="textbackground">
+						<li class="text-aria"><b class="headerbackground"> Empathy: </b> Scenarios guided us in the design process in the sense that it allowed us to empathize with the users related to specific situations. </li>
+						<li class="text-aria "> <b class="headerbackground"> Granularity of information: </b> how much info does the user get? do they just get their current address and next instruction? or can they explore Points of Interest? can they learn about unusual occurrences (e.g. construction, large slopes, weird intersections)? </li>
+
+						<li class="text-aria"> <b class="headerbackground">Granularity of feedback: </b> How much feedback is the device giving? is it long, auditory instructions? long written instructions? or does it use earcons/icons and haptic feedback to give users a quick way to receive information?</li>
+
+						<li class="text-aria"> <b class="headerbackground">Level of interaction: </b> How much focus does the user need to have on their device? Do they need to signal it whenever they want info, or is info automatically given to the user? </li>
 					</ul>
 					<figure>
 					<img src="assets/img/Personal/Scenario.jpg" class="avatar4 center" alt="">
-					<figcaption align="center"> <i>A sample scenario </i></figcaption>
+					<figcaption align="center" class="textbackground"> <i>A sample scenario </i></figcaption>
 				  </figure>
-				  <h4 class="uppermargin"><b>Affinity Diagramming</b></h4>
+
+				</div>
+			</div>
+
+			<div class="background2">
+			<div class="container">
+				  <h2 class="uppermargin" align="center"><b>AFFINITY MAP</b></h2>
 					<p class ="justified"><span class = "text-aria"> We created the affinity diagram exercise to populate the themes, arrange thoughts from brainstorming into clusters and note what was important to the development of the prototype. Once we had all the data points ready, the team sat down and created an affinity diagram to draw themes and prioritize them. Collaboration was done on an online tool called <span class ="irqhighlight"><b>MIRO</b> </span>. Affinity Diagram also helped us organize the ideas about the possible solution for the users and allowed the team to observe the ideas in our study about the prototype to be built. It gave an insight on the way each researcher in the tem thought about the device, solution, and the environment as a whole. Although time consuming, we gained valuable insights on what to prioritize going forward. This method was chosen because several people combined their research before the development of the prototype.  We did the affinity mapping exercise to populate the themes and note what was important to the development of the prototype. </span></p>
 
 				  <figure>
@@ -258,20 +275,18 @@
 
 
 
-			<section id="insights2">
+			<section>
 			  <div class="container" data-aos="fade-up">
 				  <h2>Insights</h2>
-					<ul class="listitems">
-						<b><li class="text-aria">Multiple obstacle detection:  Participants want an array of obstacles to be detected and not just a single obstacle.</li>
-						<li class="text-aria">A non-intrusive device that is multimodal: Participants do not want a device that impedes them in any way either physically or mentally in any way while running</li>
-						<li class="text-aria">Presentation of multiple haptic feedback: Participants are looking at receiving an array of feedback in the form of haptics while approaching an obstacle.
+					<ul>
+						<li><b>Multiple obstacle detection: </b>  Array of obstacles to be detected and not just a single obstacle.</li>
+						<li><b>A non-intrusive device that is multimodal: </b> The device should not hinder them in any way either physically or mentally while running</li>
+						<li><b>Presentation of multiple haptic feedback: </b> Receiving an array of feedback in the form of haptics while approaching an obstacle.
 		</li>
-						<li class="text-aria">Detection of obstacles: Participants look forward to learning about the obstacle from a short distance away.
+						<li><b>Detection of obstacles: </b> Learning about the obstacle from a short distance away.
 		</li>
-						<li class="text-aria">Weight Constraints: Participants do not want to carry something heavy while running as it impedes their run.
+						<li><b>Terrain: </b>The device should work in multiple terrains, and not just track and field.
 		</li>
-						<li class="text-aria">Terrain: Participants want the device to work in multiple terrains, and not just track and field.
-		</li></b>
 					</ul>
 			  </div>
 			</section>
@@ -315,7 +330,7 @@
 
 				  <h2 class="header-aria">Some Insights</h2>
 					<ul class="listitems">
-						<li class="text-aria">The participants mentioned that if the weight is negligible while running, it would be ideal for them to dorn the device.  </li>
+							<li class="text-aria">The participants mentioned that if the weight is negligible while running, it would be ideal for them to dorn the device.  </li>
 						<li class="text-aria"> A single sensor would not cut it in environments where wide sensing would be required.</li>
 						<li class="text-aria">Participants have demonstrated that the device may not be used entirely for running. For instance, one participant voiced concern about using any device in a crowded marathon, while others mentioned the difficulty with information bombardment.</li>
 						<li class="text-aria">Participants mentioned that the device could come on its own and be useful in obstacle detection given the array of sensors and the varied sensing range.</li>
