New Commit for mobileApp

--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -170,7 +170,7 @@
 									<h2 class="portfolio-title" align="center">RESEARCH</h2>
 								</div><p class="justified">
 									<span class="text-aria">Study to assess the manner in which participants interact with technology while running and develop a prototype for the same using the human-centered design process. Done in phases.
-										To come up with the working prototype, we had to go in depth to understand the painpoints of the users and conduct <b>Generative research.</b> Methods used in this process: </span></p>
+										To come up with the working prototype, we had to go in depth to understand the painpoints of the users and conduct <b>Generative research.</b> Research methods used in this project include: </span></p>
 									<div class="row bottompadding uppermargin">
 									<div class="col-md-2">
 										<img src="assets/img/Personal/Interviews.png" class="img-fluid" alt="">
@@ -188,7 +188,7 @@
 										<img src="assets/img/Personal/CA3.png" class="img-fluid" alt="">
 									</div>
 									<div class="col-md-2">
-										<img src="assets/img/Personal/Eval.png" class="img-fluid" alt="">
+										<img src="assets/img/Personal/EM.png" class="img-fluid" alt="">
 									</div>
 								</div>
 								</div>
