--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -132,9 +132,9 @@
 
 
 
-<div align="center">
+<div align="center" class="portfolio-background">
 	<div class="container">
-		<h1 class="portfolio-background"><strong>UX RESEARCH</strong></h1>
+		<h1><strong>UX RESEARCH</strong></h1>
 	</div>
 </div>
 
