New changes to index

--- a/index.html
+++ b/index.html
@@ -54,11 +54,25 @@
   </nav>
 
   <!-- ======= Hero Section ======= -->
+
   <section id="hero" class="d-flex flex-column justify-content-center">
+
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1><b>Hi! 👋🏽 I am Anirudh Nagraj</b></h1>
-      <p><b>I'm a User Researcher who helps build better products, bringing customers and businesses closer to one another.</b></p>
-      <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='index.html#portfolio'" > View Projects </a></button> </div>
+      <div class="row">
+        <div class="col-md-8">
+          <h2><b>Hello there! 👋🏽 I am Anirudh.</b></h2>
+
+          <div class="triangle5 shape2"></div>
+          <div class="triangle6 shape2"></div>
+          <div class="triangle7 shape2"></div>
+          <h3 class="textbackground"><b>Welcome to my portfolio!</b></h3>
+
+          <p>I'm an interaction designer who helps build better products, bringing customers and businesses closer to one another.</p>
+        </div>
+        <div class="col-md-3">
+          <img src="assets/img/Personal/Ani_New.jpg" class="img-fluid" style="border-radius:150px"  alt="">
+        </div>
+      </div>
     </div>
   </section><!-- End Hero -->
 
@@ -216,7 +230,7 @@
     <p>Come say a hi! 👋</p>
     <div class="social-links">
       <a href="www.twitter.com/anirudh_nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
-      <a href="www.instagram.com/anirudh.nagraj" class="instagram"><i class="bx bxl-instagram"></i></a>
+      <a href="https://www.instagram.com/anirudh.nagraj/" class="instagram"><i class="bx bxl-instagram"></i></a>
       <a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       <a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
     </div>
