Research page changes

--- a/coeit-research.html
+++ b/coeit-research.html
@@ -146,8 +146,7 @@
           <div class="container uppermargin">
             <div>
               <h3> <b>Recruitment </b></h3>
-              <p class="text-aria">We recruited participants using the <span class="irqhighlight"> snowball sampling technique avoid any sort of bias. </span> </p>
-              <span class="text-aria">
+              <p>We recruited participants using the <span class="irqhighlight"> snowball sampling technique avoid any sort of bias. </p>
 
                 <p class="tabspacing"><b>Demographic:</b> Researchers (Faculty and Students) , Non-researchers (Faculty and Students) whose age ranged from 18-70</p>
 
@@ -157,7 +156,7 @@
 
                     <p class="tabspacing"><b>Ethnicity: </b> Any</p>
 
-                    <p class="tabspacing"><b>Devices:</b> Mobile (Android and IOS), Laptop, Desktops, IPad and other android tablets. </p></span>
+                    <p class="tabspacing"><b>Devices:</b> Mobile (Android and IOS), Laptop, Desktops, IPad and other android tablets. </p>
                   </div>
                 </div>
         </section>
@@ -228,8 +227,6 @@
                       <p class="justified"> <span class = "text-aria"> <b> Two participants </b> were recruited and observed in their natural element.  We wanted to conduct contextual inquiries because we wanted to find out some answers to the some of the functions by letting users talk about  what they are doing and why when they are doing it. </span> </p> <p class="justified"> <span class = "text-aria"> Detailed information is often not obtained from contextual inquiries as it may relate to the behavior of the users to a set of tasks, so we decided to keep this as a precursor for the interview sessions as we would have a general idea on how to go about the questions.</span> </p>
 
                       <h2 class="header-aria">Findings</h2>
-
-                      <p class="justified"> <span class = "text-aria"> <b>Participant 1 </b> was, for the most part, satisfied with her experience. She enjoyed the visual content via images and videos. She also felt that there is a lot of impressive written content on the website. However, there were a few elements which caused confusion and frustration.<b> Participant 2 </b>, was satisfied with the overall experience of the website. She was impressed by the positioning and the usages of images along with the text to draw attention. There were instances where she felt like there is information overload.</p> </span>
 
                     </div>
                   </div>
