Pushing the new code for COEIT Research

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <section id="hero" class="d-flex flex-column justify-content-center">
 
-    <div class="container" data-aos="zoom-in" data-aos-delay="100">
+    <div class="container uppermargin" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-md-8">
           <h2><b>Hello there! 👋🏽 I am Anirudh.</b></h2>
@@ -70,7 +70,7 @@
           <p>I'm an interaction designer who helps build better products, bringing customers and businesses closer to one another.</p>
         </div>
         <div class="col-md-3">
-          <img src="assets/img/Personal/Ani_New.jpg" class="img-fluid" style="border-radius:150px"  alt="">
+          <img src="assets/img/Personal/Ani_New.jpg" class="avatar8" style="border-radius:100%"  alt="">
         </div>
       </div>
     </div>
