--- a/coeit-research.html
+++ b/coeit-research.html
@@ -79,7 +79,7 @@
 <main>
 
 	<!-- ======= Portfolio Details ======= -->
-	<section id="hero-page" class="d-flex flex-column justify-content-center">
+	<section id="hero-page3" class="d-flex flex-column justify-content-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
 			<h1>College of Engineering and Information Technology's Research Website</h1>
 		</div>
